--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 				</div>
 			</div>
 		</div>
-		/*<input type="submit" name="" value="SOAP Request" onclick="soapRequest();">*/
+		<!-- <input type="submit" name="" value="SOAP Request" onclick="soapRequest();"> -->
 	<!--===============================================================================================-->	
 		<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
 	<!--===============================================================================================-->
