--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	<!--===============================================================================================-->
 	</head>
-	<body oncontextmenu="return false">
+	<body>
 		<div class="limiter">
 			<div class="container-login100">
 				<div class="wrap-login100">
